------
v2.6.6
------




------
v2.6.5
------

[mjr] Avoid warnings on PHP 7.3 regarding continue statements within switch
      blocks.



------
v2.6.4
------

[jan] Add Turkish translation (İTÜ BİDB <sistemdestek@itu.edu.tr>).


------
v2.6.3
------

[jan] Mark PHP 7 as supported.


------
v2.6.2
------

[mms] Fix validating sent messages if the driver supports EAI addresses.


------
v2.6.1
------

[mjr] Fix sending mail via PHP's mail function (Steffen Lindner
      <mail@steffen-lindner.de>).


------
v2.6.0
------

[jan] Fix issues with certain locales like Turkish.
[mms] Add support for outputting comment information when writing an address.


------
v2.5.1
------

[mms] IDN support no longer requires intl to be built-in to PHP.


------
v2.5.0
------

[mms] Added Horde_Mail_Rfc822_List#first() function.
[mms] Add property to address object to indicate whether it is an EAI address.
[mms] Transport driver now indicates whether it handles EAI data.
[mms] Support validation of EAI addresses (RFC 6532).
[mms] Add Horde_Mail_Mbox_Parse.


------
v2.4.0
------

[mms] Added the 'noquote' option to Horde_Mail_Rfc822_Object#writeAddress().


------
v2.3.0
------

[mms] Add Horde_Mail_Transport_Lmtphorde driver.


------
v2.2.0
------

[mms] Be more lenient in parsing RFC 5322 identification field values.
[mms] Add Horde_Mail_Rfc822_Identification class.


------
v2.1.6
------

[mms] Optimizations to address parsing.


------
v2.1.5
------


------
v2.1.4
------

[mms] More thorough job trying to parse addresses that contain an @ but no
      domain information.


------
v2.1.3
------

[mms] Correctly identify e-mail addresses without domain information when
      validating.


------
v2.1.2
------

[mms] Discard personal information when it is identical to e-mail address.


------
v2.1.1
------

[mms] Workaround broken Net_SMTP handling regarding the end of message data
      (Bug #12614).


------
v2.1.0
------
