@@ -2,7 +2,9 @@
 id: Mail
 name: Mail
 full: Mail library
-description: A library that provides interfaces for sending e-mail messages and parsing e-mail addresses.
+description: >-
+  A library that provides interfaces for sending e-mail messages and parsing
+  e-mail addresses.
 list: dev
 type: library
 homepage: https://www.horde.org/libraries/Horde_Mail
