@@ -11,8 +11,8 @@
             "role": "lead"
         }
     ],
-    "version": "2.6.5",
-    "time": "2019-03-02",
+    "version": "2.6.6",
+    "time": "2022-06-25",
     "repositories": [
         {
             "type": "pear",
