@@ -2,7 +2,9 @@
 v2.6.6
 ------
 
-
+[mjr] Null string fixes for PHP 8.1 (PR #2, Christoph Wurst
+      <christoph@winzerhof-wurst.at>)
+|+
 
 
 ------
